# Edvard3

./: .gitignore  IDUN_terminal  edvard.build  exports.sh  idun_setup.sh  output.txt  requirements.txt
ros2_ws/: build_workspace.sh
ros2_ws/src/edvard_coppeliaSim/: CMakeLists.txt  package.xml
ros2_ws/src/edvard_coppeliaSim/launch/: scene_CS.launch.py
ros2_ws/src/edvard_coppeliaSim/scripts/: PyRep_control_of_arm_two_cubes.py  Reach_target_04_RL.py  Reach_target_09_recording.py  Reach_target_11_fixing_sim.py  Reach_target_13_Load_previous_run.py  Reach_target_15_cleanup.py  Reach_target_18_modified_reward_function.py  Reach_target_19_multi_process.py  Reach_target_20_more_wandb.py  Reach_target_21_multi_process.py  Reach_target_22_save_path.py  Reach_target_23_new_reward.py  Reach_target_24_GPU.py  Reach_target_25_GPU_time_reward.py
ros2_ws/src/edvard_coppeliaSim/scripts/IDUN_scripts/: Reach_target_02_continue_wandb.py  Reach_target_no_promt_01.py  end_game_rt_01.py  end_game_rt_02.py  end_game_rt_03.py  end_game_rt_04.py  end_game_rt_05.py  end_game_rt_06.py  end_game_rt_07.py  end_game_rt_08.py  end_game_rt_09.py  end_game_rt_10.py  end_game_rt_11_smaller_box.py  end_game_rt_12_smaller_box copy.py  end_game_rt_12_smaller_box.py  end_game_rt_13_smaller_box.py  end_game_rt_14.py
ros2_ws/src/edvard_coppeliaSim/scripts/Test_22_save_path/Test_05/Episode_0/: script_info.txt
ros2_ws/src/edvard_coppeliaSim/scripts/commands/: make_video.py  plot_actions.py  resume_training.py
ros2_ws/src/edvard_coppeliaSim/scripts/old_scripts/: RL_02_two_cubes.py  Reach_target_01.py  Reach_target_02_camera.py  Reach_target_03_RL.py  Reach_target_05_RL_PPO.py  Reach_target_06_RL_PPO_CNN.py  Reach_target_07_RL_PPO_CNN_wandb_error-handling.py  Reach_target_08_RL_PPO_CNN_reset_KUKA.py  Reach_target_10_recording_depth.py  Reach_target_14_Save_storage.py  Reach_target_16_make_video_command.py  Reach_target_17_added_constraints.py  joint_state_publisher.py  move_arm.py
ros2_ws/src/edvard_rviz2/: CMakeLists.txt  package.xml
ros2_ws/src/edvard_rviz2/config/: robot_state_visualize.rviz
ros2_ws/src/edvard_rviz2/launch/: load_lbr_iiwa_14_r820.launch.py  test2_lbr_iiwa_14_r820.launch.py  test3_lbr_iiwa_14_r820.launch.py  test4_lbr_iiwa_14_r820.launch.py  test5_lbr_iiwa_14_r820.launch.py  test_lbr_iiwa_14_r820.launch.py
ros2_ws/src/edvard_rviz2/scripts/: joint_state_republisher.py  joint_state_republisher_to_robot.py  publisherRobot.py  subscriberRobot.py
ros2_ws/src/edvard_rviz2/urdf/: lbr_iiwa_14_r820.urdf  lbr_iiwa_14_r820.xacro  lbr_iiwa_14_r820_macro.xacro
tests/: gpu_test.py  xvfb_test.py
(+22 files in other folders)
